<resources>
    <string name="my_app_name">InstSave</string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="username_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="search">Search</string>
    <string name="download">Download</string>
    <string name="search_hint">Enter instagram link here</string>
    <string name="quick_download">Quick Download Mode</string>
    <string name="language">Languages</string>
    <string name="share">Share</string>
    <string name="app_version">App Version</string>
    <string name="paste_username">Enter username here</string>
    <string name="next_step">Next Step</string>
    <string name="hashtag">Enter hashtag here</string>
    <string name="zh">Chinese</string>
    <string name="en">English</string>
    <string name="vp_shortcode">Link</string>
    <string name="vp_username">Username</string>
    <string name="history">Download History</string>
    <string name="details">Details</string>
    <string name="login_failed">Login Failed</string>
    <string name="signup_failed">Sign Up Failed</string>
    <string name="download_finish">Download Finished</string>
    <string name="searching">Searching…</string>
    <string name="downloading">Downloading…</string>
    <string name="not_found">Post is temporarily unavailable, please try again in a few minutes</string>
    <string name="invalid_url">Invalid Url</string>

    <string name="too_many">Too many requests</string>
    <string name="exist">Download already exists, please check history</string>
    <string name="note">We only support access to public account information</string>
    <string name="empty_username">Please enter username</string>
    <string name="empty_tag">Please enter hashtag</string>
    <string name="log_out">Log Out</string>
    <string name="long_text1">Login required to see story</string>
    <string name="long_text2">Login required to see private post, the login account must be the account that you and the person follow each other</string>
    <string name="long_text3">We do not collect your personal information. Downloading too frequently may result in your instagram account being banned</string>
    <string name="parse_error">Parse exception</string>
    <string name="recent_download">Recent</string>


    <string name="repost">Repost</string>
    <string name="delete">Delete</string>
    <string name="start_right_now">Start Right Now</string>
    <string name="failed">Get data failed</string>
    <string name="network">Network Error</string>
    <string name="cancel">Cancel</string>
    <string name="paste">Paste</string>
    <string name="search_by_user">Search user\'s posts(no login required)</string>
    <string name="search_by_tag">Search posts under a tag(no login required)</string>

    <string name="feedback">Feedback</string>
    <string name="feedbackstr">If you have any questions or feedbacks, please send email to jindesong36@gmail.com</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="file_not_found">File not found.</string>
    <string name="download_first">Download to local device first</string>

    <string name="lockscreen">Lock screen</string>
    <string name="both">Both lock screen and wallpaper</string>
    <string name="unsupport">Unsupported file type</string>
    <string name="add_successfully">Add successfully</string>
    <string name="delete_all_records">Delete all records?</string>
    <string name="no_recover">cannot be recovered if you have done.</string>
    <string name="download_failed">Download failed.</string>

    <string name="user_not_found">User not found.</string>
    <string name="search_user_hashtag">username or hashtag, e.g., #love</string>
    <string name="download_start">Download start</string>
    <string name="need_permission">We need read and write permissions to help you download photos and videos</string>
    <string name="settings">Settings</string>
    <string name="share_fail">Share failed due to system reason</string>
    <string name="search_wait">Search may take some time, please wait</string>
    <string name="caption">Copy Caption</string>
    <string name="copied">copied to clipboard</string>
    <string name="tv_hide">hide</string>
    <string name="tv_show">…show</string>
    <string name="only_one">Only one download task can be performed at a time</string>
    <string name="features">Features</string>
    <string name="post">post</string>
    <string name="following">following</string>
    <string name="followers">followers</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>