<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_view_fill2"
    android:layout_height="wrap_content">

    <TextView
        android:textColor="@color/black"
        android:textSize="16sp"
        android:padding="20dp"
        android:text="@string/delete_all_records"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textColor="@color/black"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="14sp"
        android:text="@string/no_recover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/tv_delete"
            android:textColor="@color/red"
            android:gravity="center"
            android:text="@string/delete"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tv_cancel"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>


    </LinearLayout>

</LinearLayout>