<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">

        <View
            android:layout_width="match_parent"
            android:layout_height="25dp"/>

        <TextView
            android:textColor="@color/black"
            android:text="@string/username"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/username_hint"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            android:gravity="center_vertical"
            android:background="@drawable/bg_edit2"
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <TextView
            android:text="@string/password"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password_hint"
            android:paddingRight="12dp"
            android:paddingLeft="12dp"
            android:gravity="center_vertical"
            android:background="@drawable/bg_edit2"
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <Button
            android:text="@string/login"
            android:id="@+id/btn_login"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

    </LinearLayout>

</layout>