<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/bg_ll_bottom"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_repost"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:layout_marginLeft="16dp"
            android:src="@mipmap/refresh"
            android:id="@+id/img_repost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:text="@string/repost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_caption"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:layout_marginLeft="16dp"
            android:src="@mipmap/caption"
            android:id="@+id/img_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:text="@string/caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_share"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:layout_marginLeft="16dp"
            android:src="@mipmap/share_link"
            android:id="@+id/img_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:text="@string/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_delete"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:layout_marginLeft="16dp"
            android:src="@mipmap/delete"
            android:id="@+id/img_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>