<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog_fill"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/ll_both"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:layout_marginLeft="16dp"
            android:src="@mipmap/ic_wallpaper"
            android:id="@+id/img_both"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:text="@string/both"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:id="@+id/ll_wallpaper"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:layout_marginLeft="16dp"
            android:src="@mipmap/ic_wallpaper"
            android:id="@+id/img_wallpaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:text="@string/wallpaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_lockscreen"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:layout_marginLeft="16dp"
            android:src="@mipmap/ic_wallpaper"
            android:id="@+id/img_lockscreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:text="@string/lockscreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>