<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.SignupActivity">


        <View
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:src="@mipmap/icon_back" />


        </RelativeLayout>

        <LinearLayout
            android:visibility="visible"
            android:id="@+id/ll_view1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/username"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_edit2"
                android:gravity="center_vertical"
                android:hint="@string/username_hint"
                android:paddingLeft="12dp"
                android:paddingRight="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_edit2"
                android:gravity="center_vertical"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingLeft="12dp"
                android:paddingRight="12dp" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:text="@string/next_step" />

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_view2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="Code"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_edit2"
                android:gravity="center_vertical"
                android:hint="code"
                android:paddingLeft="12dp"
                android:paddingRight="12dp" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:text="注册" />
        </LinearLayout>


    </LinearLayout>
</layout>