<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragments.UserFragment">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_edit"
                android:gravity="center_vertical|start"
                android:hint="@string/paste_username"
                android:maxLines="1"
                android:paddingLeft="12dp"
                android:paddingRight="40dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/img_clear"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="30dp"
                android:src="@drawable/close"
                android:visibility="invisible" />
        </FrameLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginLeft="20dp"
                android:src="@mipmap/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:singleLine="false"
                android:maxLines="2"
                android:layout_marginLeft="5dp"
                android:text="@string/note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:text="@string/search"
            android:textSize="16sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ProgressBar
                android:id="@+id/progress_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:visibility="invisible" />

        </FrameLayout>

    </LinearLayout>
</layout>