<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragments.SettingFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@mipmap/notifications" />

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/quick_download" />
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <androidx.appcompat.widget.SwitchCompat
                android:textOn="On"
                android:textOff="Off"
                android:checked="true"
                android:id="@+id/my_switch"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        <View
            android:background="@color/gray_1"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:id="@+id/ll_share"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@mipmap/share" />

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/share" />
        </LinearLayout>

        <View
            android:background="@color/gray_1"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@mipmap/mood" />

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/app_version" />
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tv_version"
                android:layout_marginRight="10dp"
                android:text="1.0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <View
            android:background="@color/gray_1"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <LinearLayout
            android:id="@+id/ll_logout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@mipmap/logout" />

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/log_out" />
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>


        </LinearLayout>

    </LinearLayout>
</layout>