<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="horizontal">

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="120dp"
        android:layout_height="match_parent">

        <ImageView
            android:layout_marginTop="5dp"
            android:id="@+id/img_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"/>

        <TextView
            android:id="@+id/tv_username"
            android:ellipsize="end"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent">

        <TextView
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:id="@+id/tv_post"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/post"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <TextView
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:id="@+id/tv_followers"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/followers"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <TextView
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:id="@+id/tv_following"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/following"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>